--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -52,10 +52,10 @@
     </div>
     <div class="col-md-4">
         <div class="card">
-            <div class="card-body">
+            <!-- <div class="card-body">
                 <h5 class="card-title">Upcoming Visits</h5>
                 <h3>{{ upcoming_visits }}</h3>
-            </div>
+            </div> -->
         </div>
     </div>
 </div>
