--- a/templates/admin/guidance.html
+++ b/templates/admin/guidance.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+<!-- {% extends "base.html" %}
 
 {% block title %}Manage Guidance{% endblock %}
 
@@ -87,4 +87,4 @@
     </div>
 </div>
 {% endblock %}
-
+ -->
