--- a/templates/parent/guidance.html
+++ b/templates/parent/guidance.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+<!-- {% extends "base.html" %}
 
 {% block title %}Guidance{% endblock %}
 
@@ -25,4 +25,4 @@
     {% endfor %}
 </div>
 {% endblock %}
-
+ -->
